# Telcel-Portabilidad

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  Makefile  PENDIENTES.md  README.md  Script_Portabilidad_05032026.md  VERA_Bot_Specification.md  bitacora.md  check_promos.py  docker-compose.dev.yml  docker-compose.yml  pendientes.md  pyproject.toml  requirements.txt  telegram_bitrix_setup.md
.claude/commands/: reset-test.md
.github/workflows/: ci.yml
agents/: callbacks.py  llm.py
agents/portabilidad/: context.py  graph.py  state.py  utils.py
api/: deps.py  main.py
api/routes/: admin.py  auth.py  bitrix.py  bitrix_bot_control.py  connector.py  health.py  (+2 more)
config/: logging.py  settings.py
dashboard/: Caddyfile  Dockerfile  angular.json  package.json
db/: migrations.py  models.py
docs/: README.md  cotizaciones_agentes_ia_smart.md  dashboard_kpi_guia.md  estructura_tablas.md  lay_out_ideal_kpis.md  manual_dashboard_bitrix_integracion.md  manual_imconnector_whatsapp_bitrix.md  reporte_actividades_2026-06-18_2026-06-30.md
integrations/: debounce.py  exceptions.py  megacable_db.py  redis_client.py
jobs/: bitrix_sync.py  connector_poll.py  email_report.py  kpi_eventos.py  kpi_export.py  seguimientos.py
knowledge/: seed.py
prompts/: cierre_fallback.txt  horarios.txt  objeciones.txt  oferta_principal.txt  prompt_unificado.md  prompt_unificado_v2.md  sondeo_con_recarga.txt  sondeo_sin_recarga.txt  validacion_general.txt
scripts/: reset_test_phone.py  seed_dashboard_users.py  setup_imconnector.py
tests/: FINDINGS.md
(+69 files in other folders)
